Compiler/tests/typing/good/testfile-mut-1.rs
fn main() { let mut x = 41; x = 42; }
